# Ask-Amo

./: .env.example  .gitignore  AGENTS.md  AMO_INTERNAL_KNOWLEDGE.md  BRAIN_DATA_LEAK_ANALYSIS.md  BRAIN_PERMANENT_PRESERVATION.md  BRAIN_PRESERVATION_IMPLEMENTATION.md  COMPREHENSIVE_USER_GUIDE.md  INTEGRATION_IMPROVEMENTS.md  INTENT_ENHANCEMENT_IMPLEMENTATION.md  LICENSE  LOCAL_MODEL_FIX.md  MODEL_NAMING_CONFLICT_FIX.md  PRODUCTION_MODEL_FIX.md  QUICK_ACTIONS_IMPROVEMENTS.md  README.md  SENTENCE_BUILDER_IMPLEMENTATION.md  STATE_MANAGEMENT_EVALUATION.md  TAB_SCROLLING_FIXES.md  TEST_SUITE.md  TOAST_GUIDE_SYSTEM.md  WEBVIEW_ANALYSIS.md  WEB_INTEGRATION_IMPROVEMENTS.md  askamo-chat-test.xml  askamo-clean-launch.xml  askamo-cleared.xml  askamo-final-check.xml  askamo-main-check-2.xml  askamo-main-check-3.xml  askamo-main-check.xml  askamo-relaunched.xml  askamo-settings-final.xml  askamo-settings.xml  askamo-sidebar.xml  askamo-ui.xml  capacitor.config.ts  conversation1.xml  conversation2.xml  index.html  metadata.json  (+15 more)
.github/skills/auto-debugger/: SKILL.md
.github/skills/boilerplate-gen/: SKILL.md
.github/skills/build-amo-vocab/: SKILL.md
.github/skills/cli-master/: SKILL.md
.github/skills/debug-tests/: SKILL.md
.github/skills/doc-search/: SKILL.md
.github/skills/playwright-test/: SKILL.md
.github/skills/red-team-amo/: SKILL.md
.github/skills/refactor-helper/: SKILL.md
.github/skills/tdd-enforcer/: SKILL.md
.github/skills/test-amo/: SKILL.md
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_offline_llama.cpp
android/app/src/main/java/com/askamo/mobile/: MainActivity.java  NativeOfflineLlmPlugin.java  NativeOfflineLlmRuntime.java  NativePackagePlugin.java  NativePiperVoicePlugin.java  NativeSpeechRecognitionPlugin.java  NativeTerminalPlugin.java  NativeTtsPlugin.java  SecretStorePlugin.java
android/app/src/main/res/values/: strings.xml
dev-dist/: sw.js
docs/: ADVANCED_FEATURES_GUIDE.md  AGENTS.md  DEVELOPER_GUIDE.md  index.md  native-offline-llm-plan.md
knowledge-inputs/: multilingual-intent.md
models/: active-model-q2.json  active-model.json  ui-app.xml  ui-current.xml  ui-dump.xml  ui-models.xml  ui-settings.xml  ui-settings2.xml
public/: manifest.webmanifest
scripts/: generateMultilingualDataset.cjs  importKnowledge.cjs  importKnowledge.ts  seed-vocab.mjs  test-amo.mjs
src/: App.tsx  App.tsx.backup2  App.tsx.restored  index.css  main.tsx  types.ts
src/__tests__/: example.test.ts
src/components/: AmoAvatar.tsx  CodeEditor.tsx  CodePreview.tsx  CodeSnippet.tsx  ErrorBoundary.tsx  FileTree.tsx  HelpPanel.tsx  IntentEnhancer.tsx  MessageList.tsx  ModelDownloadManager.tsx  PackageManager.tsx  ProjectSelector.tsx  SentenceBuilder.tsx  Sidebar.tsx  Terminal.tsx  Toast.tsx  VocabularyBuilder.tsx  WebBrowser.tsx  WebView.tsx  WelcomeGuide.tsx
src/contexts/: TourContext.tsx
src/data/: amoHelpData.ts  amoInstantReplies.ts  amoSelfKnowledge.ts  amoSingleSource.ts  amoStarterPacks.ts  curatedKnowledge.ts  multilingualDataset.json  userManual.ts
src/data/superbrain/: superbrainAtlas.ts  superbrainHistory.ts  superbrainReference.ts  superbrainWisdom.ts
src/hooks/: useMessages.ts
src/services/: amoBrainService.ts  amoIdeDispatcher.ts  amoIdeLoop.ts  amoIdePrompt.ts  amoIntegrationService.ts  amoToolCoordinator.ts  apiKeyStorage.ts  assistantPrompt.ts  assistantRuntimeService.ts  audioCaptureService.ts  autoLearningService.ts  brainLearningService.ts  browserService.ts  builderBridgeService.ts  commandRouterService.ts  documentService.ts  errorHandlingService.ts  fileContextService.ts  followUpQuestionGenerator.ts  geminiService.ts  groqService.ts  index.ts  intentClassifierService.ts  intentEnhancementService.ts  intentPatternService.ts  intentRefinementService.ts  intentRouterService.ts  inworldService.ts  knowledgeBootstrapService.ts  knowledgeStoreService.ts  mistralService.ts  nativeAssistantOrchestrator.ts  nativeChatSessionService.ts  nativeOfflineLlmService.ts  nativePiperVoiceService.ts  nativeReplyCoordinator.ts  nativeSpeechRecognitionService.ts  nativeTtsService.ts  neuralBuilderBridge.ts  openaiService.ts  (+26 more)
src/stores/: loraAdapterStore.ts  modelSettingsStore.ts  ragSettingsStore.ts  responseCacheStore.ts
src/utils/: codeExecutor.ts  codeRunner.ts  securityUtils.ts
